Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105134

WebEngineView is crashing while loading the pdf file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 6.4.0 RC1, 6.5.0 Beta1
    • 6.3.1
    • WebEngine
    • None
    • All
    • 5a84ae36a9 (qt/qtwebengine/dev) 5a84ae36a9 (qt/tqtc-qtwebengine/dev) 1da010b14c (qt/qtwebengine/6.4) 1da010b14c (qt/tqtc-qtwebengine/6.4)

    Description

      Hello, webengineview is crashing while loading the pdf file. Reproducible with minimal example changing main.qml to:

      Window {
      width: 1024
      height: 750
      visible: true
      WebEngineView

      { anchors.fill: parent settings.pdfViewerEnabled : true settings.pluginsEnabled: true url: "[http://www.africau.edu/images/default/sample.pdf]" }

      }

      in debug mode assertion happens here: ASSERT: "m_webContentsAccessibility" in file C:/Users/qt/work/qt/qtwebengine/src/core/browser_accessibility_manager_qt.cpp, line 101
      PS building qt with -no-feature-accessibility fixes problem but i don't know side effects...

      PPS this is also happening in 6.4.0 beta2

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            pvarga Peter Varga
            ricta Riccardo Tani
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes