Disable accessibility for guest views

It is not implemented yet.

Fixes: QTBUG-105134
Change-Id: Ide86d038729fe2647bd9a5560b30729697a4f575
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 5a84ae36a948ef534258d302bd40c74dc0446f2b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>